# income-modeling-eph

./: .gitignore  AGENTS.md  EXPERIMENTS.md  Makefile  README.md  pyproject.toml
configs/: experiment_baseline.yaml  experiment_debug.yaml  experiment_hgb_debug.yaml  experiment_hgb_l2_sweep.yaml  experiment_hgb_leaf_capacity_sweep.yaml  experiment_hgb_lr_iter_sweep.yaml  experiment_hgb_min_leaf_sweep.yaml  experiment_hgb_pilot.yaml  experiment_hgb_quick_clean_geo_v1.yaml  experiment_hgb_quick_no_geo_v1.yaml  experiment_hgb_quick_shuffled_geo_ranks_v1.yaml  experiment_hgb_quick_with_geo_ranks_v1.yaml  experiment_hgb_sweep.yaml  experiment_linear_aglo_fe_v1.yaml  experiment_linear_aglo_year_fe_v1.yaml  experiment_linear_quarter_fe_v1.yaml  experiment_linear_region_fe_v1.yaml  experiment_linear_year_fe_v1.yaml  experiment_regularization_sweep.yaml  feature_contract.yaml
legacy/student_scripts/: Classification_INGRESO.ipynb  Data_Ingestion_and_Analysis.py  Deeper_Grid_Search.py  Feature_Engineering.py  First_Grid_Search.ipynb  Neural_Network.py  PostTrainingAnalysis.ipynb  Tesis_LCD_Codigo.ipynb
scripts/: 01_build_dataset.py  02_run_baseline_experiment.py  04_build_diagnostics.py  05_compare_runs.py
specs/: 001_baseline_income_prediction.md  runbook.md
src/eph_income/: config.py  contracts.py  dataset.py  diagnostics.py  experiments.py  features.py  observability.py  pipelines.py  splits.py
tests/: test_compare_runs.py  test_dataset_build.py  test_diagnostics.py  test_experiment_outputs.py  test_feature_contract.py  test_observability.py  test_split_integrity.py
(+4 files in other folders)
